--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.8",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
